all subpage without the actual subpage

--- a/index.html
+++ b/index.html
@@ -11,40 +11,43 @@
 
 <body>
     <header>
+        <div class="header-wrapper">
+            <div class="logo">
 
-
-
-        <div class="logo">
-
-            <img src="images/teaterhuset.png">
-        </div>
-        <!--Burger Menu-->
-        <nav role="navigation">
-            <div id="menuToggle">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul id="menu">
-                    <a href="#">
-                        <li>Home</li>
-                    </a>
-                    <a href="#">
-                        <li>About</li>
-                    </a>
-                    <a href="#">
-                        <li>Info</li>
-                    </a>
-                    <a href="#">
-                        <li>Contact</li>
-                    </a>
-                    <a href="https://erikterwan.com/" target="_blank">
-                        <li>Show me more</li>
-                    </a>
-                </ul>
+                <img src="images/teaterhuset_logo_blau_small.png">
             </div>
-        </nav>
+
+
+            <!--Burger Menu-->
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menu">
+                        <a href="#">
+                            <li>Home</li>
+                        </a>
+                        <a href="#">
+                            <li>About</li>
+                        </a>
+                        <a href="#">
+                            <li>Info</li>
+                        </a>
+                        <a href="#">
+                            <li>Contact</li>
+                        </a>
+                        <a href="https://erikterwan.com/" target="_blank">
+                            <li>Show me more</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </nav>
+        </div>
     </header>
+
 
     <!--grid container-->
     <div class="grid-container">
@@ -108,7 +111,7 @@ width images with number and caption text -->
 
             <section id="theater-events">
                 <div class="section-title">
-                    <h1>Events</h1>
+                    <h1>Theater</h1>
                     <hr>
                 </div>
 
@@ -145,6 +148,4 @@ width images with number and caption text -->
 
     <script src="script.js"></script>
     <script src="slideshow.js"></script>
-</body>
-
-</html>
+</body></html>
