--- a/sub.html
+++ b/sub.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Huset Teater_JS</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Burgermenu.css">
 </head>
 
-<body>
+<body class="subpage">
 
-   <section id="posts"></section>
-    <h1>Subpage</h1>
-    <section class="eventTemplate">
-        <article>
-            <header>
-                <h1></h1>
-                <a href="sub.html?id="></a>
-                  <img src="" alt="" class="cover">
-            </header>
-             <section class="body_copy">BODY STUFF HERE</section>
-        </article>
-    </section>
+    <div class="header_event">
+        <div class="logo">
+
+            <img src="images/teaterhuset_logo_blau_small.png">
+        </div>
+
+
+        <!--Burger Menu-->
+        <nav role="navigation">
+            <div id="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <a href="#">
+                        <li>Home</li>
+                    </a>
+                    <a href="#">
+                        <li>About</li>
+                    </a>
+                    <a href="#">
+                        <li>Info</li>
+                    </a>
+                    <a href="#">
+                        <li>Contact</li>
+                    </a>
+                    <a href="https://erikterwan.com/" target="_blank">
+                        <li>Show me more</li>
+                    </a>
+                </ul>
+            </div>
+
+        </nav>
+    </div>
+
 
 
 
     <script src="script.js"></script>
-</body>
-</html>
+</body></html>
