first try on subpage

--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,11 @@
                     <a href="contact.html">
                         <li>Contact</li>
                     </a>
-                    <a href="https://erikterwan.com/" target="_blank">
-                        <li>Show me more</li>
+                    <a href="way.html">
+                        <li>Contact</li>
+                    </a>
+                    <a href="prices.html">
+                        <li>Prices</li>
                     </a>
                 </ul>
             </div>
