--- a/sub.html
+++ b/sub.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="Burgermenu.css">
 </head>
 
-<body class="subpage">
+<body>
 
-    <div class="header_event">
+    <div class="header_wrapper">
         <div class="logo">
 
             <img src="images/teaterhuset_logo_blau_small.png">
@@ -26,20 +26,23 @@
                 <span></span>
                 <span></span>
                 <ul id="menu">
-                    <a href="#">
+                    <a href="index.html">
                         <li>Home</li>
                     </a>
-                    <a href="#">
+                    <a href="about.html">
                         <li>About</li>
                     </a>
-                    <a href="#">
+                    <a href="info.html">
                         <li>Info</li>
                     </a>
-                    <a href="#">
+                    <a href="contact.html">
                         <li>Contact</li>
                     </a>
-                    <a href="https://erikterwan.com/" target="_blank">
-                        <li>Show me more</li>
+                    <a href="way.html">
+                        <li>How to find us</li>
+                    </a>
+                    <a href="prices.html">
+                        <li>Prices</li>
                     </a>
                 </ul>
             </div>
@@ -47,8 +50,39 @@
         </nav>
     </div>
 
+    <!--grid container-->
+    <div class="grid-container">
+        <!-- event image container -->
+        <div class="grid-item">
+
+            <section id="posts"></section>
+            <h1>Subpage</h1>
+            <section class="eventTemplate">
+                <article>
+                    <header>
+                        <h1></h1>
+                        <a href="sub.html?id="></a>
+                        <img src="" alt="" class="cover">
+                    </header>
+                    <section class="body_copy">BODY STUFF HERE</section>
+                </article>
+            </section>
+        </div>
+        <!--Footer-->
+        <div class="footer-wrapper">
+            <div class="footer"><a href="#">FAQ</a></div>
+            <div class="footer"><a href="#">Contact us</a></div>
+            <div class="footer"><a href="#">Find us</a>
+                <div class="footer">In cooperation with </div><a href="" class="logo">
+                    <img src="images/huset.png" alt="logo huset">
+                </a>
+
+
+            </div>
+        </div>
 
 
 
-    <script src="script.js"></script>
+
+        <script src="script.js"></script>
 </body></html>
