--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
 
     <!--grid container-->
-    <div class="grid-container_sub">
+    <div class="grid-container">
         <!-- event image container -->
         <div class="grid-item">
             <h1>Contact</h1>
