--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ROBOTS" content="NOINDEX, FOLLOW">
+    <meta name="ROBOTS" content="INDEX, NOFOLLOW">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Huset Teater_JS</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="Burgermenu.css">
@@ -26,25 +29,29 @@
                     <span></span>
                     <span></span>
                     <ul id="menu">
-                        <a href="#">
+                        <a href="index.html">
                             <li>Home</li>
                         </a>
-                        <a href="#">
+                        <a href="about.html">
                             <li>About</li>
                         </a>
-                        <a href="#">
+                        <a href="info.html">
                             <li>Info</li>
                         </a>
-                        <a href="#">
+                        <a href="contact.html">
                             <li>Contact</li>
                         </a>
-                        <a href="https://erikterwan.com/" target="_blank">
-                            <li>Show me more</li>
+                        <a href="way.html">
+                            <li>Contact</li>
+                        </a>
+                        <a href="prices.html">
+                            <li>Prices</li>
                         </a>
                     </ul>
                 </div>
 
             </nav>
+
         </div>
     </header>
 
@@ -100,7 +107,7 @@ width images with number and caption text -->
             <template class="eventTemplate">
                 <div class="event">
                     <div class="price">95 kr.</div>
-                    <div class="date">13. – 16. November</div>
+                    <div class="body_date">13. – 16. November</div>
                     <div class="title_event">
                         <a href="#">FORVENTNINGEN OM VITA // XENON</a>
                         <div class="subtitle">Et eksperiment med tid, form og fokus - eller mangel på samme. </div>
