--- a/sub.html
+++ b/sub.html
@@ -54,35 +54,39 @@
     <div class="grid-container">
         <!-- event image container -->
         <div class="grid-item">
+            <div class="event-top">
+                <div class="price">95 kr.</div>
+                <div class="body_date">date</div>
+                <div class="title_event">
+                    <a href="#">Titel</a>
+                    <div class="subtitle">Subtitle </div>
+                </div>
+                <img class="picture" src="">
+            </div>
 
-            <section id="posts"></section>
-            <h1>Subpage</h1>
-            <section class="eventTemplate">
-                <article>
-                    <header>
-                        <h1></h1>
-                        <a href="sub.html?id="></a>
-                        <img src="" alt="" class="cover">
-                    </header>
-                    <section class="body_copy">BODY STUFF HERE</section>
-                </article>
-            </section>
         </div>
-        <!--Footer-->
-        <div class="footer-wrapper">
-            <div class="footer"><a href="#">FAQ</a></div>
-            <div class="footer"><a href="#">Contact us</a></div>
-            <div class="footer"><a href="#">Find us</a>
-                <div class="footer">In cooperation with </div><a href="" class="logo">
-                    <img src="images/huset.png" alt="logo huset">
-                </a>
-
-
+        <div class="grid-item">
+            <div class="event-bottom">
+                <div class="">BUY TICKETS</div>
+                <div class="description">text</div>
             </div>
         </div>
+    </div>
+    <!--Footer-->
+    <div class="footer-wrapper">
+        <div class="footer"><a href="#">FAQ</a></div>
+        <div class="footer"><a href="#">Contact us</a></div>
+        <div class="footer"><a href="#">Find us</a>
+            <div class="footer">In cooperation with </div><a href="" class="logo">
+                <img src="images/huset.png" alt="logo huset">
+            </a>
+
+
+        </div>
+    </div>
 
 
 
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body></html>
