--- a/sub.html
+++ b/sub.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="header_wrapper">
+    <div class="header-contact">
         <div class="logo">
 
             <img src="images/teaterhuset_logo_blau_small.png">
@@ -57,9 +57,9 @@
             <div class="event-top">
                 <div class="price">95 kr.</div>
                 <div class="body_date">date</div>
-                <div class="title_event">
-                    <a href="#">Titel</a>
+                <div class="title_event"><a href="#">Titel</a>
                     <div class="subtitle">Subtitle </div>
+
                 </div>
                 <img class="picture" src="">
             </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="grid-item">
             <div class="event-bottom">
-                <div class="">BUY TICKETS</div>
+                <div class="tickets"><a href="">BUY TICKETS</a></div>
                 <div class="description">text</div>
             </div>
         </div>
