Burger menu links fixed

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ROBOTS" content="NOINDEX, FOLLOW">
+    <meta name="ROBOTS" content="INDEX, NOFOLLOW">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Huset Teater_JS</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="Burgermenu.css">
@@ -40,9 +43,7 @@
                     <a href="contact.html">
                         <li>Contact</li>
                     </a>
-                    <a href="way.html">
-                        <li>Contact</li>
-                    </a>
+
                     <a href="prices.html">
                         <li>Prices</li>
                     </a>
