--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
                         <a href="index.html">
                             <li>Home</li>
                         </a>
+                        <a href="sub.html">
+                            <li>Events</li>
+                        </a>
                         <a href="about.html">
                             <li>About</li>
                         </a>
-                        <a href="info.html">
-                            <li>Info</li>
+                        <a href="way.html">
+                            <li>How to find us</li>
                         </a>
                         <a href="contact.html">
                             <li>Contact</li>
                         </a>
-                        <a href="way.html">
-                            <li>Contact</li>
-                        </a>
+
                         <a href="prices.html">
                             <li>Prices</li>
                         </a>
