--- a/sub.html
+++ b/sub.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ROBOTS" content="NOINDEX, FOLLOW">
+    <meta name="ROBOTS" content="INDEX, NOFOLLOW">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Huset Teater_JS</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="Burgermenu.css">
 </head>
+
 
 <body>
 
@@ -29,18 +33,19 @@
                     <a href="index.html">
                         <li>Home</li>
                     </a>
+                    <a href="sub.html">
+                        <li>Events</li>
+                    </a>
                     <a href="about.html">
                         <li>About</li>
-                    </a>
-                    <a href="info.html">
-                        <li>Info</li>
-                    </a>
-                    <a href="contact.html">
-                        <li>Contact</li>
                     </a>
                     <a href="way.html">
                         <li>How to find us</li>
                     </a>
+                    <a href="contact.html">
+                        <li>Contact</li>
+                    </a>
+
                     <a href="prices.html">
                         <li>Prices</li>
                     </a>
