Burger menu fixed

--- a/about.html
+++ b/about.html
@@ -32,11 +32,9 @@
                 <span></span>
                 <ul id="menu">
                     <a href="index.html">
-                        <li>Home</li>
-                    </a>
-                    <a href="sub.html">
                         <li>Events</li>
                     </a>
+
                     <a href="about.html">
                         <li>About</li>
                     </a>
@@ -47,7 +45,7 @@
                         <li>Contact</li>
                     </a>
 
-                    <a href="prices.html">
+                    <a href="price.html">
                         <li>Prices</li>
                     </a>
                 </ul>
@@ -63,7 +61,7 @@
     <div class="grid-container_sub">
         <!-- event image container -->
         <div class="grid-item">
-            <h1>How to find us</h1>
+            <h1>About</h1>
             <img src="images/kort.jpg" class="event_image" alt=" Huset map">
 
         </div>
