--- a/contact.html
+++ b/contact.html
@@ -32,25 +32,27 @@
                 <span></span>
                 <ul id="menu">
                     <a href="index.html">
-                        <li>Home</li>
+                        <li>Events</li>
                     </a>
+
                     <a href="about.html">
                         <li>About</li>
                     </a>
-                    <a href="info.html">
-                        <li>Info</li>
+                    <a href="way.html">
+                        <li>How to find us</li>
                     </a>
                     <a href="contact.html">
                         <li>Contact</li>
                     </a>
 
-                    <a href="prices.html">
+                    <a href="price.html">
                         <li>Prices</li>
                     </a>
                 </ul>
             </div>
 
         </nav>
+
     </div>
 
     <!--contact-->
