--- a/way.html
+++ b/way.html
@@ -32,11 +32,9 @@
                 <span></span>
                 <ul id="menu">
                     <a href="index.html">
-                        <li>Home</li>
-                    </a>
-                    <a href="sub.html">
                         <li>Events</li>
                     </a>
+
                     <a href="about.html">
                         <li>About</li>
                     </a>
@@ -47,13 +45,14 @@
                         <li>Contact</li>
                     </a>
 
-                    <a href="prices.html">
+                    <a href="price.html">
                         <li>Prices</li>
                     </a>
                 </ul>
             </div>
 
         </nav>
+
 
     </div>
     <!--contact-->
