--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
                     <span></span>
                     <ul id="menu">
                         <a href="index.html">
-                            <li>Home</li>
-                        </a>
-                        <a href="sub.html">
                             <li>Events</li>
                         </a>
+
                         <a href="about.html">
                             <li>About</li>
                         </a>
@@ -45,13 +43,14 @@
                             <li>Contact</li>
                         </a>
 
-                        <a href="prices.html">
+                        <a href="price.html">
                             <li>Prices</li>
                         </a>
                     </ul>
                 </div>
 
             </nav>
+
 
         </div>
     </header>
