--- a/sub.html
+++ b/sub.html
@@ -31,11 +31,9 @@
                 <span></span>
                 <ul id="menu">
                     <a href="index.html">
-                        <li>Home</li>
-                    </a>
-                    <a href="sub.html">
                         <li>Events</li>
                     </a>
+
                     <a href="about.html">
                         <li>About</li>
                     </a>
@@ -46,13 +44,14 @@
                         <li>Contact</li>
                     </a>
 
-                    <a href="prices.html">
+                    <a href="price.html">
                         <li>Prices</li>
                     </a>
                 </ul>
             </div>
 
         </nav>
+
     </div>
 
     <!--grid container-->
