Event date_subpages

--- a/about.html
+++ b/about.html
@@ -54,15 +54,14 @@
         </nav>
 
     </div>
-    <!--contact-->
+    <!--About-->
 
 
     <!--grid container-->
-    <div class="grid-container_sub">
+    <div class="grid-container">
         <!-- event image container -->
         <div class="grid-item">
             <h1>About</h1>
-            <img src="images/kort.jpg" class="event_image" alt=" Huset map">
 
         </div>
 
@@ -70,24 +69,10 @@
         <div class="grid-item">
 
             <div class="description">
+                Teaterhuset was founded in 2004 after the first Vildskud Theater festival. There was a need to gather all the new theater in Copenhagen so the activities didn’t fade away when the festival was over. There were som negotiations with the city and Teaterhuset was born as a volunteer organisation.<br><br>
 
+                We live at Huset-KBH, but we are our own little unit. The members uses our space to rehearse, experiment and create shows. We have more than 7 rehearsal spaces together with the two stages Vox and Xenon. Our members creates approximately 16 shows a year on these stages. Every year in august we make the Vilskud Theater festival. As a member of Teaterhuset you can use our spaces to rehearse, produce a show, rehearse for the theater schools, be a part of creating new activities or be in the mangement for new initiativs as Vildskud & Stagelab.
 
-
-                <br>Find vej til gode oplevelser
-                Du finder Huset i hjertet af København, tæt ved Strøget og med masser af offentlige transportmuligheder.<br><br>
-
-                Huset har mange scener og flere etager, så orienter dig eventuelt i oversigten øverst på siden eller spørg efter den specifikke scene, hvis du ikke ved, hvor du skal hen.<br><br>
-
-
-
-                HUSET-KBH<br>
-                Rådhusstræde 13<br>
-
-                1466 København K<br>
-
-                Tlf: 21 51 21 51<br>
-
-                info@huset-kbh.dk<br><br>
 
 
             </div>
