--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ width images with number and caption text -->
             <template class="eventTemplate">
                 <div class="event">
                     <div class="price">95 kr.</div>
-                    <div class="body_date">13. – 16. November</div>
+                    <div class="body_date">date</div>
                     <div class="title_event">
                         <a href="#">FORVENTNINGEN OM VITA // XENON</a>
                         <div class="subtitle">Et eksperiment med tid, form og fokus - eller mangel på samme. </div>
@@ -155,4 +155,6 @@ width images with number and caption text -->
 
     <script src="script.js"></script>
     <script src="slideshow.js"></script>
-</body></html>
+</body>
+
+</html>
