--- a/price.html
+++ b/price.html
@@ -62,7 +62,6 @@
         <!-- event image container -->
         <div class="grid-item">
             <h1>Prices</h1>
-            <img src="images/kort.jpg" class="event_image" alt=" Huset map">
 
         </div>
 
@@ -73,21 +72,7 @@
 
 
 
-                <br>Find vej til gode oplevelser
-                Du finder Huset i hjertet af København, tæt ved Strøget og med masser af offentlige transportmuligheder.<br><br>
-
-                Huset har mange scener og flere etager, så orienter dig eventuelt i oversigten øverst på siden eller spørg efter den specifikke scene, hvis du ikke ved, hvor du skal hen.<br><br>
-
-
-
-                HUSET-KBH<br>
-                Rådhusstræde 13<br>
-
-                1466 København K<br>
-
-                Tlf: 21 51 21 51<br>
-
-                info@huset-kbh.dk<br><br>
+                All prices from the bar
 
 
             </div>
