--- a/way.html
+++ b/way.html
@@ -59,11 +59,11 @@
 
 
     <!--grid container-->
-    <div class="grid-container_sub">
+    <div class="grid-container">
         <!-- event image container -->
         <div class="grid-item">
             <h1>How to find us</h1>
-            <img src="images/kort.jpg" class="event_image" alt=" Huset map">
+            <img src="images/kort.jpg" class="picture" alt=" Huset map">
 
         </div>
 
