--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ width images with number and caption text -->
 
     <!--Footer-->
     <div class="footer-wrapper">
-        <div class="footer"><a href="#">FAQ</a></div>
+        <div class="footer"><a href="faq.index">FAQ</a></div>
         <div class="footer"><a href="#">Contact us</a></div>
         <div class="footer"><a href="#">Find us</a>
             <div class="footer">In cooperation with </div><a href="" class="logo">
@@ -155,6 +155,4 @@ width images with number and caption text -->
 
     <script src="script.js"></script>
     <script src="slideshow.js"></script>
-</body>
-
-</html>
+</body></html>
