--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,10 @@
 
     <!--Footer-->
     <div class="footer-wrapper">
-        <div class="footer"><a href="#">FAQ</a></div>
-        <div class="footer"><a href="#">Contact us</a></div>
-        <div class="footer"><a href="#">Find us</a>
-            <div class="footer">In cooperation with </div><a href="" class="logo">
+        <div class="footer"><a href="faq.html">FAQ</a></div>
+        <div class="footer"><a href="contact.html">Contact us</a></div>
+        <div class="footer"><a href="way.html">Find us</a>
+            <div class="footer">In cooperation with </div><a href="https://huset-kbh.dk/" class="logo">
                 <img src="images/huset.png" alt="logo huset">
             </a>
 
@@ -112,4 +112,6 @@
 
     <script src="script.js"></script>
     <script src="slideshow.js"></script>
-</body></html>
+</body>
+
+</html>
