--- a/contact.html
+++ b/contact.html
@@ -13,47 +13,48 @@
 </head>
 
 <body class="contactpage">
+    <header>
+        <div class="header-contact">
+            <a href="index.html">
+                <div class="logo" href="index.html">
 
-    <div class="header-contact">
-        <a href="index.html">
-            <div class="logo" href="index.html">
-
-                <img src="images/teaterhuset_logo_blau_small.png">
-            </div>
-        </a>
+                    <img src="images/teaterhuset_logo_blau_small.png">
+                </div>
+            </a>
 
 
-        <!--Burger Menu-->
-        <nav role="navigation">
-            <div id="menuToggle">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul id="menu">
-                    <a href="index.html">
-                        <li>Events</li>
-                    </a>
+            <!--Burger Menu-->
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menu">
+                        <a href="index.html">
+                            <li>Events</li>
+                        </a>
 
-                    <a href="about.html">
-                        <li>About</li>
-                    </a>
-                    <a href="way.html">
-                        <li>How to find us</li>
-                    </a>
-                    <a href="contact.html">
-                        <li>Contact</li>
-                    </a>
+                        <a href="about.html">
+                            <li>About</li>
+                        </a>
+                        <a href="way.html">
+                            <li>How to find us</li>
+                        </a>
+                        <a href="contact.html">
+                            <li>Contact</li>
+                        </a>
 
-                    <a href="price.html">
-                        <li>Prices</li>
-                    </a>
-                </ul>
-            </div>
+                        <a href="price.html">
+                            <li>Prices</li>
+                        </a>
+                    </ul>
+                </div>
 
-        </nav>
+            </nav>
 
-    </div>
+        </div>
+    </header>
 
     <!--contact-->
 
