--- a/way.html
+++ b/way.html
@@ -63,7 +63,7 @@
         <!-- event image container -->
         <div class="grid-item">
             <h1>How to find us</h1>
-            <img src="images/kort.jpg" class="picture" alt=" Huset map">
+            <img src="images/kort.jpg" class="map" alt="Huset map">
 
         </div>
 
@@ -114,6 +114,4 @@
 
     <script src="script.js"></script>
     <script src="slideshow.js"></script>
-</body>
-
-</html>
+</body></html>
